--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 
 									<div class="panel panel-default">
-										<div class="panel-thumbnail"><img src="http://bootply.com/assets/example/bg_5.jpg" class="img-responsive"></div>
+										<div class="panel-thumbnail"><img src="assets/bg_5.jpg" class="img-responsive"></div>
 										<div class="panel-body">
 											<p class="lead">Solid Timeline</p>
 											<p>45 Followers, 13 Posts</p>
@@ -163,7 +163,7 @@
 									</div>
 
 									<div class="panel panel-default">
-										<div class="panel-thumbnail"><img src="http://bootply.com/assets/example/bg_4.jpg" class="img-responsive"></div>
+										<div class="panel-thumbnail"><img src="assets/bg_4.jpg" class="img-responsive"></div>
 										<div class="panel-body">
 											<p class="lead">Social Good</p>
 											<p>1,200 Followers, 83 Posts</p>
