--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 									<div class="panel panel-default">
 										<div class="panel-thumbnail"><img src="assets/bg_5.jpg" class="img-responsive"></div>
 										<div class="panel-body">
-											<p class="lead">Solid Timeline</p>
+											<p class="lead">Melvin Carvalho</p>
 											<p>26 Followers, {{posts.length}} Posts</p>
 
 
