--- a/index.html
+++ b/index.html
@@ -118,10 +118,6 @@
 								<div class="col-sm-5">
 
 
-
-
-
-
 									<div class="panel panel-default">
 										<div class="panel-thumbnail"><img src="assets/bg_5.jpg" class="img-responsive"></div>
 										<div class="panel-body">
@@ -142,6 +138,7 @@
 
 
 											<div class="panel-heading"><a href="#" class="pull-right">View all</a> <h4><a href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a></h4></div>
+											<div ng-if="n[4]" class="panel-thumbnail"><img ng-src="{{n[4]}}" class="img-responsive"></div>
 											<div class="panel-body">
 												<p><img src="//placehold.it/150x150" class="img-circle pull-right"> <a href="#">{{n[2]}}</a></p>
 												<div class="clearfix"></div>
