--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<title>Solid Timeline</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<link href="css/bootstrap.min.css" rel="stylesheet">
+	<link rel="shortcut icon" type="img/png" href="images/favicon.png">
+
 	<!--[if lt IE 9]>
 	<script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
 	<![endif]-->
