Friends and posts

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 										<div class="panel-body">
 											<span ng-if="user">
 											<p class="lead"><a ng-href="{{user}}">{{name}}</a></p>
-											<p>26 Followers, {{posts.length}} Posts</p>
+											<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{user | escape}}">{{friends}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
 		  								<p>
 	  										<img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
   										</p>
