--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
 									<div class="panel panel-default">
 										<div class="panel-thumbnail"><img src="assets/bg_5.jpg" class="img-responsive"></div>
 										<div class="panel-body">
-											<span ng-if="user">
-											<p class="lead"><a ng-href="{{user}}">{{name}}</a></p>
-											<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{user | escape}}">{{friends}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
+											<span ng-if="profile">
+											<p class="lead"><a ng-href="{{profile}}">{{name}}</a></p>
+											<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">{{friends}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
 		  								<p>
 	  										<img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
   										</p>
 										  </span>
-											<span ng-if="!user">
+											<span ng-if="!profile">
 											<p><a ng-click="TLSlogin()">Sign In</a></p>
 										  </span>
 
