--- a/index.html
+++ b/index.html
@@ -175,9 +175,9 @@
 										<form class="form-horizontal" role="form">
 											<h4>What's New</h4>
 											<div class="form-group" style="padding:14px;">
-												<textarea class="form-control" placeholder="Update your status"></textarea>
+												<textarea ng-model="post" class="form-control" placeholder="Update your status"></textarea>
 											</div>
-											<button class="btn btn-primary pull-right" type="button">Post</button><ul class="list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
+											<button class="btn btn-primary pull-right" ng-click="save()" type="button">Post</button><ul class="list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
 										</form>
 									</div>
 
