--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
 									<div class="panel panel-default">
 										<div class="panel-heading"><h4>What Is Solid?</h4></div>
 										<div class="panel-body">
-											<a target="_blank" href="https://github.com/solid/solid">Solid</a> is a set of protocols to redencentralize the web.
+											<a target="_blank" href="https://github.com/solid/solid">Solid</a> is a set of protocols to redecentralize the web.
 										</div>
 
 
