--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
 											<div class="form-group" style="padding:14px;">
 												<textarea ng-model="post" class="form-control" placeholder="Update your status"></textarea>
 											</div>
-											<button class="btn btn-primary pull-right" ng-click="save()" type="button">Post</button><ul class="list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
+											<button class="btn btn-primary pull-right" ng-click="save()" type="button">Post</button>
+											  <ul class="list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li>
+													<li><a href="#imageModal" role="button" data-toggle="modal"><i class="glyphicon glyphicon-camera"></i></a></li>
+													<li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li>
+												</ul>
 										</form>
 									</div>
 
@@ -241,6 +245,25 @@
 							<button class="btn btn-primary btn-sm" data-dismiss="modal" aria-hidden="true">Post</button>
 							<ul class="pull-left list-inline"><li><a href=""><i class="glyphicon glyphicon-upload"></i></a></li><li><a href=""><i class="glyphicon glyphicon-camera"></i></a></li><li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li></ul>
 						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+
+		<!--image modal-->
+		<div id="imageModal" class="modal fade" tabindex="-1" role="dialog" aria-hidden="true">
+			<div class="modal-dialog">
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+						Add image
+					</div>
+					<div class="modal-body">
+						<form class="form center-block">
+							<div class="form-group">
+								<textarea class="form-control input-lg" ng-model="img" autofocus="" placeholder="Add image here"></textarea>
+							</div>
+						</form>
 					</div>
 				</div>
 			</div>
