--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 											</div>
 										</div>
 
-                    <div><a href="#">Older</a></div>
+                    <div><a ng-click="older()">Older</a></div>
 
 								</div>
 
