--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 								<div class="col-sm-7">
 
 									<div class="panel panel-default">
-										<div class="panel-thumbnail"><img src="https://avatars3.githubusercontent.com/u/14262490?v=3&s=200" class="img-responsive"></div>
+										<div class="panel-thumbnail"><img src="assets/bg_motyl.jpg" class="img-responsive"></div>
 										<div class="panel-body">
 											<span ng-if="profile">
 												<p class="lead"><a ng-href="{{profile}}">{{name}}</a></p>
