--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 						<nav class="collapse navbar-collapse" role="navigation">
 							<form class="navbar-form navbar-left">
 								<div class="input-group input-group-sm" style="max-width:360px;">
-									<input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+									<input type="text" ng-model="query" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
 									<div class="input-group-btn">
-										<button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+										<button ng-click="search()" class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
 									</div>
 								</div>
 							</form>
