--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 							</form>
 							<ul class="nav navbar-nav">
 								<li>
-									<a href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
+									<a ng-click="home()" href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
 								</li>
 								<li>
 									<a href="#postModal" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
