Make S clicable closes #5

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 								<span class="icon-bar"></span>
 								<span class="icon-bar"></span>
 							</button>
-							<a href="/" class="navbar-brand logo">S</a>
+							<a href="/" ng-click="home()" class="navbar-brand logo">S</a>
 						</div>
 						<nav class="collapse navbar-collapse" role="navigation">
 							<form class="navbar-form navbar-left">
