Newest rdflib fixes #5

--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
 	<script src="bower_components/angular-audio/app/angular.audio.js"></script>
 	<script src="bower_components/notie/notie.js"></script>
 
-	<script src="vendor/rdflib.min.js"></script>
+	<script src="vendor/rdflib.js"></script>
 	<script src="vendor/common.js"></script>
 
 	<script src="bower_components/moment/moment.js"></script>
