Clean up calender closes #7

--- a/index.html
+++ b/index.html
@@ -175,39 +175,11 @@
 										<div class="panel-heading"><h4>Activity</h4></div>
 										<div class="panel-body">
 
-											<button id="example-h-PreviousDomain-selector" style="margin-bottom: 10px;" class="btn"><</button>
-											<button id="example-h-NextDomain-selector" style="margin-bottom: 10px;" class="btn">></button>
+											<button id="PreviousMonth-selector" style="margin-bottom: 10px;" class="btn"><</button>
+											<button id="NextMonth-selector" style="margin-bottom: 10px;" class="btn">></button>
 
-												<div id="example-h">
+												<div id="calendar">
 												</div>
-
-												<style>
-																#example-h .graph-label {
-																	font-weight: bold;
-																	font-size: 18px;
-																	fill: #fff;
-																}
-
-																#example-h .domain-background {
-																	fill: #2d3a47;
-																}
-
-																#example-h .graph-domain.m_2 .domain-background {
-																	fill: red;
-																}
-
-																#example-h .grap-rect {fill:#35252d;}
-																#example-h .q0 {fill:#35252d;}
-																#example-h .q1 {fill:#fea1eb; opacity: 0.1}
-																#example-h .q2 {fill:#fea1eb; opacity: 0.2}
-																#example-h .q3 {fill:#fea1eb; opacity: 0.4}
-																#example-h .q4 {fill:#fea1eb; opacity: 0.6}
-																#example-h .q5 {fill:#fea1eb; opacity: 0.8}
-																#example-h .q6 {fill:#fea1eb; opacity: 1}
-																#example-h .graph-rect:hover {fill: #fff; opacity: 1; stroke-width: 0;}
-
-
-															</style>
 
 										</div>
 									</div>
