--- a/index.html
+++ b/index.html
@@ -130,7 +130,9 @@
 										<div class="panel-heading"><a href="#" class="pull-right">View all</a> <h4><a href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a></h4></div>
 										<div ng-if="n[4]" class="panel-thumbnail"><img ng-src="{{n[4]}}" class="img-responsive"></div>
 										<div class="panel-body">
-											<p><img src="//placehold.it/150x150" class="img-circle pull-right"> <span>{{n[2]}}</span></p>
+											<p><img src="//placehold.it/150x150" class="img-circle pull-right">
+												<span ng-bind-html="n[2] | parseUrlFilter"></span>
+											</p>
 											<div class="clearfix"></div>
 											<hr>
 
