Featured vs All Stories

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					</ul>
 
 					<ul class="nav hidden-xs" id="lg-menu">
-						<li class="active"><a href="#featured"><i class="glyphicon glyphicon-list-alt"></i> Featured</a></li>
-						<li><a href="#stories"><i class="glyphicon glyphicon-list"></i> Stories</a></li>
+						<li class="active"><a ng-click="featured()"><i class="glyphicon glyphicon-list-alt"></i> Featured</a></li>
+						<li><a ng-click="stories()" href="#"><i class="glyphicon glyphicon-list"></i> All Stories</a></li>
 						<li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Saved</a></li>
 						<li><a href="#"><i class="glyphicon glyphicon-refresh"></i> Refresh</a></li>
 					</ul>
