--- a/index.html
+++ b/index.html
@@ -86,9 +86,10 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-user"></i></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{name}} &nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-user"></i></a>
 									<ul class="dropdown-menu">
-										<li><a ng-click="TLSlogin()">Sign In</a></li>
+										<li ng-if="!user"><a ng-click="TLSlogin()">Sign In</a></li>
+										<li ng-if="user"><a ng-click="logout()">Sign Out</a></li>
 										<li><a href="">About</a></li>
 										<li><a href="">Settings</a></li>
 										<li><a href="">Help</a></li>
