--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 								<div class="col-sm-5">
 
 
-									<div class="well">
+									<div ng-if="user" class="well">
 										<form class="form-horizontal" role="form">
 											<h4>What's New</h4>
 											<div class="form-group" style="padding:14px;">
@@ -122,6 +122,10 @@
 												<li><a href=""><i class="glyphicon glyphicon-map-marker"></i></a></li>
 											</ul>
 										</form>
+									</div>
+
+									<div ng-if="!user" class="well">
+										<a ng-click="TLSlogin()">Sign In to use timeline</a>
 									</div>
 
 
@@ -155,7 +159,7 @@
 										</div>
 									</div>
 
-									<div><a ng-click="older()">Older</a></div>
+									<div><a ng-if="profile" ng-click="older()">Older</a></div>
 
 								</div>
 
@@ -173,7 +177,7 @@
 												</p>
 											</span>
 											<span ng-if="!profile">
-												<p><a ng-click="TLSlogin()">Sign In</a></p>
+												<p><a ng-click="TLSlogin()">Sign In to use timeline</a></p>
 											</span>
 
 										</div>
