--- a/index.html
+++ b/index.html
@@ -90,9 +90,7 @@
 									<ul class="dropdown-menu">
 										<li ng-if="!user"><a ng-click="TLSlogin()">Sign In</a></li>
 										<li ng-if="user"><a ng-click="logout()">Sign Out</a></li>
-										<li><a href="">About</a></li>
-										<li><a href="">Settings</a></li>
-										<li><a href="">Help</a></li>
+										<li><a target="_blank" href="https://github.com/melvincarvalho/timeline">Source Code</a></li>
 									</ul>
 								</li>
 							</ul>
