--- a/index.html
+++ b/index.html
@@ -86,10 +86,11 @@
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
 								<li class="dropdown">
-									<a href="#" class="dropdown-toggle" data-toggle="dropdown">{{name}} &nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-user"></i></a>
+									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><span ng-if="user">{{name}}</span> &nbsp;&nbsp;&nbsp;<i class="glyphicon glyphicon-user"></i></a>
 									<ul class="dropdown-menu">
 										<li ng-if="!user"><a ng-click="TLSlogin()">Sign In</a></li>
 										<li ng-if="user"><a ng-click="logout()">Sign Out</a></li>
+										<li ng-if="!user"><a target="_blank" href="https://solid.github.io/solid-idps/">Register</a></li>
 										<li><a target="_blank" href="https://github.com/melvincarvalho/timeline">Source Code</a></li>
 									</ul>
 								</li>
@@ -123,7 +124,7 @@
 									</div>
 
 									<div ng-if="!user" class="well">
-										<a ng-click="TLSlogin()">Sign In to use timeline</a>
+										<a ng-click="TLSlogin()">Sign In</a> or <a target="_blank" href="https://solid.github.io/solid-idps/">Register</a>
 									</div>
 
 
@@ -175,7 +176,8 @@
 												</p>
 											</span>
 											<span ng-if="!profile">
-												<p><a ng-click="TLSlogin()">Sign In to use timeline</a></p>
+												<p><a ng-click="TLSlogin()">Sign In</a> or <a target="_blank" href="https://solid.github.io/solid-idps/">Register</a>
+</p>
 											</span>
 
 										</div>
