--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 								<div class="col-sm-5">
 
 
-									<div ng-if="user" class="well">
+									<div ng-show="user" class="well">
 										<form class="form-horizontal" role="form">
 											<h4>What's New</h4>
 											<div class="form-group" style="padding:14px;">
