--- a/index.html
+++ b/index.html
@@ -300,6 +300,7 @@
 	<script src="bower_components/lumx/dist/lumx.min.js"></script>
 	<script src="bower_components/angular-audio/app/angular.audio.js"></script>
 	<script src="bower_components/notie/notie.js"></script>
+	<script src="bower_components/dexie/dist/latest/Dexie.js"></script>
 
 	<script src="vendor/rdflib.js"></script>
 	<script src="vendor/common.js"></script>
