--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 										<div class="panel-body">
 											<span ng-if="profile">
 												<p class="lead"><a ng-href="{{profile}}">{{name}}</a></p>
-												<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">{{friends}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
+												<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">{{knows.length}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
 												<p>
 													<img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
 												</p>
