--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 								<div class="col-sm-7">
 
 									<div class="panel panel-default">
-										<div class="panel-thumbnail"><img src="assets/bg_motyl.jpg" class="img-responsive"></div>
+										<div class="panel-thumbnail"><img ng-src="{{backgroundImage}}" class="img-responsive"></div>
 										<div class="panel-body">
 											<span ng-if="profile">
 												<p class="lead"><a ng-href="{{profile}}">{{name}}</a></p>
