Correct names for posts

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
 
 										<div class="panel-heading">
-											<span class="name">{{name}}</span>
+											<span class="name">{{n[5].value}}</span>
 											<span class="pull-right time"><i class="glyphicon glyphicon-chevron-down"></i></span>
 											<br><a class="time" href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a>
 										</div>
