--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
 
 										<div class="panel-heading">
+											<img ng-src="{{n[6]}}" height="40" width="40"></img>
 											<span class="name">{{n[5].value}}</span>
 											<span class="pull-right time"><i class="glyphicon glyphicon-chevron-down"></i></span>
 											<br><a class="time" href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a>
