Add friends list

--- a/index.html
+++ b/index.html
@@ -171,14 +171,13 @@
 										<div class="panel-body">
 											<span ng-if="profile">
 												<p class="lead"><a ng-href="{{profile}}">{{name}}</a></p>
-												<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">{{friends}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
-												<p>
-													<img src="https://lh3.googleusercontent.com/uFp_tsTJboUY7kue5XAsGA=s28" width="28px" height="28px">
-												</p>
+												<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">{{knows.length}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
+												<span ng-repeat="friend in friends">
+													<a ng-show="friend.avatar" ng-click="setProfile(friend.id)"><img title="{{friend.name}}" src="{{friend.avatar}}" width="28px" height="28px" /></a>
+												</span>
 											</span>
 											<span ng-if="!profile">
-												<p><a ng-click="TLSlogin()">Sign In</a> or <a target="_blank" href="https://solid.github.io/solid-idps/">Register</a>
-</p>
+												<p><a ng-click="TLSlogin()">Sign In</a> or <a target="_blank" href="https://solid.github.io/solid-idps/">Register</a></p>
 											</span>
 
 										</div>
