--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 										<div class="panel-body">
 											<span ng-if="profile">
 												<p class="lead"><a ng-href="{{profile}}">{{name}}</a></p>
-												<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">{{knows.length}} friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
+												<p><a target="_blank" href="https://linkeddata.github.io/profile-editor/#/friends/view?webid={{profile | escape}}">Friends</a>, <a  target="_blank" href="{{timeline}}">{{posts.length}} Posts</a></p>
 												<span ng-repeat="friend in friends">
 													<a ng-show="friend.avatar" ng-click="setProfile(friend.id)"><img title="{{friend.name}}" src="{{friend.avatar}}" width="28px" height="28px" /></a>
 												</span>
