--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
 
 
 									<div class="panel panel-default">
-										<div class="panel-heading"><h4>Activity</h4></div>
+										<div class="panel-heading"><h4>Activity ({{date}})</h4></div>
 										<div class="panel-body">
 
 											<button id="PreviousMonth-selector" style="margin-bottom: 10px;" class="btn"><</button>
