--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 					</ul>
 
 					<ul class="nav hidden-xs" id="lg-menu">
-						<li class="active"><a ng-click="showProfile()"><i class="glyphicon glyphicon-user"></i> {{ name || 'profile' }}</a></li>
+						<li class="active"><a ng-click="setProfile()"><i class="glyphicon glyphicon-user"></i> {{ name || 'profile' }}</a></li>
 						<li class="active"><a ng-click="featured()"><i class="glyphicon glyphicon-list-alt"></i> News Feed</a></li>
 						<li><a ng-click="stories()" href="#"><i class="glyphicon glyphicon-list"></i> All Stories</a></li>
 						<!--
