--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 
 
 										<div class="panel-heading">
-											<img ng-src="{{n[6]}}" height="40" width="40"></img>
+											<img ng-show="n[6]" ng-src="{{n[6]}}" height="40" width="40"></img>
 											<a ng-click="setProfile(n[1])" class="name">{{n[5].value}}</a>
 											<span class="pull-right time"><i class="glyphicon glyphicon-chevron-down"></i></span>
 											<br><a class="time" href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a>
