Start to add likes

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 											<form>
 												<div class="input-group">
 													<div class="input-group-btn">
-														<button class="btn btn-default">+1</button><a href="{{n[3]}}" target="_blank" class="btn btn-default"><i class="glyphicon glyphicon-share"></i></a>
+														<button ng-click="like(n[3])" class="btn btn-default">+1</button><a href="{{n[3]}}" target="_blank" class="btn btn-default"><i class="glyphicon glyphicon-share"></i></a>
 													</div>
 													<input type="text" class="form-control" placeholder="Add a comment..">
 												</div>
