--- a/index.html
+++ b/index.html
@@ -150,9 +150,15 @@
 											<hr>
 
 											<form>
+												<div ng-if="n[8]"><span ng-repeat="l in n[7]" style="color: #5890FF" class="panel panel-default">{{l}} </span> like<span ng-if="n[8] === 1">s</span> this<hr></div>
 												<div class="input-group">
+
 													<div class="input-group-btn">
-														<button ng-click="like(n[3])" class="btn btn-default">+1</button><a href="{{n[3]}}" target="_blank" class="btn btn-default"><i class="glyphicon glyphicon-share"></i></a>
+
+														<button ng-if="n[8]" title="{{n[7]}}" ng-click="unlike(n[3])" class="btn btn-default" style="color: #5890FF"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+														<button ng-if="!n[8]" title="{{n[7]}}" ng-click="like(n[3])" class="btn btn-default"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+
+														<a href="{{n[3]}}" target="_blank" class="btn btn-default"><i class="glyphicon glyphicon-share"></i></a>
 													</div>
 													<input type="text" class="form-control" placeholder="Add a comment..">
 												</div>
