--- a/index.html
+++ b/index.html
@@ -149,18 +149,22 @@
 							<div class="clearfix"></div>
 							<hr>
 
-							<form>
+							<form class="comment-block">
 
 								<div ng-if="n[8]"><span ng-repeat="l in n[7]" style="color: #5890FF" class="panel panel-default">{{l}} </span> like<span ng-if="n[8] === 1">s</span> this<hr></div>
 
-								<div style="background-color: #F6F7F8" ng-if="n[10]">
-									<span style="font-size: 12px" ng-repeat="c in n[10]" class="">
-										<img ng-show="c.img.uri" ng-src="{{c.img.uri}}" height="32" width="32"></img>
-										<a  class="name">{{c.name.value}}</a>
-  									{{c.content.value}}<br>
-  									<a class="time" href="{{c.subject.uri}}" target="_blank" am-time-ago="c.created.value"></a>
+								<div ng-if="n[10]">
+									<div class="comment-name" ng-repeat="c in n[10]" class="">
+										<div class="comment-img">
+											<img style="vertical-align: top" ng-show="c.img.uri" ng-src="{{c.img.uri}}" height="32" width="32"></img>
+										</div>
+										<div class="comment-text">
+											<a  class="name" >{{c.name.value}}</a>
+  										<span>{{c.content.value}}</span><br>
+  										<a class="time" href="{{c.subject.uri}}" target="_blank" am-time-ago="c.created.value"></a>
+									  </div>
 										<hr>
-									</span>
+									</div>
 								</div>
 
 								<div class="input-group">
