--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 					<div ng-repeat="n in posts" class="panel panel-default">
 
 						<div class="panel-heading">
-							<img ng-show="n[6]" ng-src="{{n[6]}}" height="40" width="40"></img>
-							<a ng-click="setProfile(n[1])" class="name">{{n[5].value}}</a>
-							<span class="pull-right time"><i class="glyphicon glyphicon-chevron-down"></i></span>
-							<br><a class="time" href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a>
+							<img class="title-img pull-left" ng-show="n[6]" ng-src="{{n[6]}}" height="40" width="40"></img>
+							<a ng-click="setProfile(n[1])" class="name title-name">{{n[5].value}}</a>
+							<span class="time pull-right"><i class="glyphicon glyphicon-chevron-down"></i></span>
+							<br><a class="title-time time" href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a>
 						</div>
 						<div ng-if="n[4]" class="panel-thumbnail"><img ng-src="{{n[4]}}" class="img-responsive"></div>
 						<div class="panel-body">
