--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
 						<div class="panel-heading">
 							<img class="title-img pull-left" ng-show="n[6]" ng-src="{{n[6]}}" height="40" width="40"></img>
 							<a ng-click="setProfile(n[1])" class="name title-name">{{n[5].value}}</a>
-							<span class="time pull-right"><i class="glyphicon glyphicon-chevron-down"></i></span>
-							<br><a class="title-time time" href="{{n[3]}}" target="_blank" am-time-ago="n[0]"></a>
+							<a  href="{{n[3]}}" target="_blank" class="time pull-right"><i class="glyphicon glyphicon-chevron-down"></i></a>
+							<br><a class="title-time time" ng-click="showPost(n[3])" href="#" am-time-ago="n[0]"></a>
 						</div>
 						<div ng-if="n[4]" class="panel-thumbnail"><img ng-src="{{n[4]}}" class="img-responsive"></div>
 						<div class="panel-body">
@@ -152,7 +152,10 @@
 
 							<form class="comment-block">
 
-								<div ng-if="n[8]"><span ng-repeat="l in n[7]" style="color: #5890FF" class="panel panel-default">{{l}} </span> like<span ng-if="n[8] === 1">s</span> this<hr></div>
+								<div ng-if="n[8]">
+									<span ng-repeat="l in n[7]" style="color: #5890FF" class="panel panel-default">{{l}} </span> like
+									<span ng-if="n[8] === 1">s</span> this<hr>
+								</div>
 
 								<div ng-if="n[10]">
 									<div class="comment-name" ng-repeat="c in n[10]" class="">
