Fix multiple commentors

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 									<div class="input-group-btn">
 
 										<button ng-if="n[9]" title="{{n[7]}}" ng-click="unlike(n[3])" class="btn btn-default" style="color: #5890FF"><i class="glyphicon glyphicon-thumbs-up"></i></button>
-										<button ng-if="!n[9]" title="{{n[7]}}" ng-click="like(n[3])" class="btn btn-default"><i class="glyphicon glyphicon-thumbs-up"></i></button>
+										<button ng-if="!n[9]" title="{{n[7]}}" ng-click="like()" class="btn btn-default"><i class="glyphicon glyphicon-thumbs-up"></i></button>
 
 										<a href="{{n[3]}}" target="_blank" class="btn btn-default"><i class="glyphicon glyphicon-share"></i></a>
 									</div>
