--- a/index.html
+++ b/index.html
@@ -78,6 +78,9 @@
 							<li>
 								<a ng-click="home()" href="#"><i class="glyphicon glyphicon-home"></i> Home</a>
 							</li>
+							<li>
+								<a target="_blank" href="https://solid.github.io/solid-inbox/#"><i class="glyphicon glyphicon-inbox"></i> Inbox</a>
+							</li>
 							<!--
 							<li>
 							<a href="#postModal" role="button" data-toggle="modal"><i class="glyphicon glyphicon-plus"></i> Post</a>
