--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
 					<ul class="dropdown-menu">
 						<li ng-if="!user"><a ng-click="TLSlogin()">Sign In</a></li>
 						<li ng-if="user"><a ng-click="logout()">Sign Out</a></li>
+						<li ng-if="user"><a target="_blank" href="https://linkeddata.github.io/profile-editor/">Edit Profile</a></li>
 						<li ng-if="!user"><a target="_blank" href="https://solid.github.io/solid-idps/">Register</a></li>
 						<li><a target="_blank" href="https://github.com/solid-social/timeline">Source Code</a></li>
   					<li><a target="_blank" href="https://melvincarvalho.gitbooks.io/solid-social/content/">About</a></li>
