--- a/index.html
+++ b/index.html
@@ -34,10 +34,12 @@
 						<li class="active"><a ng-click="setProfile()"><i class="glyphicon glyphicon-user"></i> {{ name || 'Profile' }}</a></li>
 						<li class="active"><a ng-click="featured()"><i class="glyphicon glyphicon-list-alt"></i> News Feed</a></li>
 						<li><a ng-click="stories()" href="#"><i class="glyphicon glyphicon-list"></i> All Stories</a></li>
+						<li><a ng-click="refresh()" href="#"><i class="glyphicon glyphicon-refresh"></i> Refresh</a></li>
+						<li><hr></li>
+						<li><a target="_blank" href="http://webappmarket.org/">APPS</a></li>
 						<!--
 						<li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Likes</a></li>
 					-->
-					<li><a ng-click="refresh()" href="#"><i class="glyphicon glyphicon-refresh"></i> Refresh</a></li>
 				</ul>
 
 				<!-- tiny only nav-->
