--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 						<li><a ng-click="refresh()" href="#"><i class="glyphicon glyphicon-refresh"></i> Refresh</a></li>
 						<li><hr></li>
 						<li><a target="_blank" href="http://webappmarket.org/">APPS</a></li>
+
+						<li ng-repeat="app in apps"><a target="_blank" ng-href="{{app.id}}">{{app.name}}</a></li>
+
 						<!--
 						<li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Likes</a></li>
 					-->
