Bug fix change launch link to homepage

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 						<li><hr></li>
 						<li><a target="_blank" href="http://webappmarket.org/">APPS</a></li>
 
-						<li ng-repeat="app in apps"><a target="_blank" ng-href="{{app.id}}">{{app.name}}</a></li>
+						<li ng-repeat="app in apps"><a target="_blank" ng-href="{{app.homepage}}">{{app.name}}</a></li>
 
 						<!--
 						<li><a href="#"><i class="glyphicon glyphicon-paperclip"></i> Likes</a></li>
