--- a/index.html
+++ b/index.html
@@ -1,47 +1,112 @@
-<head>
-  <meta charset="utf-8">
-  <title>satrajit.ghosh</title>
-  <meta name="author" content="Satrajit Ghosh">
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang=""> <!--<![endif]-->
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>satrajit.ghosh</title>
+        <meta name="author" content="Satrajit Ghosh">
+        <meta name="description" content="Solving problems together">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  
-  <meta name="description" content="At the recent Neuroinformatics congress in Stockholm, I gave a presentation on
-representing certain types of knowledge by capturing structured &hellip;">
-  
+        <link rel="stylesheet" href="css/normalize.min.css">
+        <link rel="stylesheet" href="css/main.css">
 
-  <!-- http://t.co/dKP3o1e -->
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+        <script src="js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
+    </head>
+    <body>
+        <!--[if lt IE 8]>
+            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
+        <![endif]-->
 
-  
-  <link rel="canonical" href="https://satra.cogitatum.org">
-  <link href="/favicon.png" rel="icon">
-  
-  
-  <script type="text/javascript">
-    var _gaq = _gaq || [];
-    _gaq.push(['_setAccount', 'UA-339450-8']);
-    _gaq.push(['_trackPageview']);
-    (function() {
-      var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-      ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-      var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-    })();
-  </script>
+        <div class="header-container">
+            <header class="wrapper clearfix">
+                <h1 class="title">Solving problems together!</h1>
+                <nav>
+                    <ul>
+                        <li><a href="blog">Blog</a></li>
+                        <li><a href="timeline">Timeline</a></li>
+                        <li><a href="profile">Profile</a></li>
+                    </ul>
+                </nav>
+            </header>
+        </div>
+
+        <div class="main-container">
+            <div class="main wrapper clearfix">
+
+                <article>
+                    <!--
+                    <header>
+                        <h1>article header h1</h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec.</p>
+                    </header>
+                    <section>
+                        <h2>article section h2</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                    </section>
+                    <section>
+                        <h2>article section h2</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor. Etiam ullamcorper lorem dapibus velit suscipit ultrices. Proin in est sed erat facilisis pharetra.</p>
+                    </section>
+                    <footer>
+                        <h3>article footer h3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam sodales urna non odio egestas tempor. Nunc vel vehicula ante. Etiam bibendum iaculis libero, eget molestie nisl pharetra in. In semper consequat est, eu porta velit mollis nec. Curabitur posuere enim eget turpis feugiat tempor.</p>
+                    </footer>
+                    -->
+                    <section>
+                        <a href="https://twitter.com/satra_" class="twitter-follow-button twitter-follow-button-sidebar" data-show-count="false" data-lang="en" data-size="large" data-dnt="true">Twitter</a> |
+                        <a href="https://github.com/satra" rel="me">GitHub</a> | <a href="https://plus.google.com/105261369456480898587" rel="me">Google+</a>
+                        <p>I am a principal research scientist at the <a href="http://mcgovern.mit.edu">McGovern Institute for Brain Research</a>
+                            at MIT, an assistant professor in the Department of Otology and Laryngology at
+                            <a href="http://www.hms.harvard.edu">Harvard Medical School</a>, and a faculty member in the
+                            <a href="http://www.hms.harvard.edu/dms/shbt">Speech and Hearing Biosciences and Technology</a> program in the
+                            <a href="http://www.hms.harvard.edu/dms">Harvard Division of Medical Sciences</a>.</p>
+
+                        <p>My research areas include neuroinformatics, applied machine learning,
+                            neuroimaging, software engineering and speech communication.</p>
+                        <p>I am also a member of the Neuroimaging taskforce of the  Standards for
+                            Datasharing program of the <a href="http://www.incf.org">International Neuroinformatics Coordinating Facilities</a>.</p>
 
 
-</head>
+                    </section>
+                </article>
 
-<body>
-  <ul>
-    <li><a href="/timeline">Timeline</a></li>
-    <li><a href="/blog">Blog</a></li>
-    <li><a href="/profile">Profile</a></li>
-  </ul>
+                <aside>
+                    <h3>Contact</h3>
 
-  <ul>
-    <li><a href="http://twitter.com/satra_" class="btn"><i class="icon-twitter-sign"></i> On Twitter</a></li>
-    <li><a href="https://github.com/satra" rel="me">@satra on GitHub</a></li>
-    <li><a href="https://plus.google.com/105261369456480898587" rel="me">satrajit.ghosh on G+</a></li>
-  </ul>
-</body>
+                    <p><a href="http://whereis.mit.edu/?go=46">Building Location</a></p>
+                    <p>Satrajit Ghosh [ satra at mit dot edu ]</p>
+                    <p>Off:  46-4033F, 43 Vassar St, Cambridge, MA 02139</p>
+                    <p>Tel:  +1.617.324.3544</p>
+                </aside>
+
+
+            </div> <!-- #main -->
+        </div> <!-- #main-container -->
+
+        <div class="footer-container">
+            <footer class="wrapper">
+                <h3>footer</h3>
+            </footer>
+        </div>
+
+        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+        <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+        <script src="js/main.js"></script>
+
+        <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
+        <script>
+            (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
+            function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
+            e=o.createElement(i);r=o.getElementsByTagName(i)[0];
+            e.src='//www.google-analytics.com/analytics.js';
+            r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
+            ga('create','UA-339450-8','auto');ga('send','pageview');
+        </script>
+    </body>
+</html>
