updated blog posts

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <nav>
                     <ul>
                         <li><a href="blog">Blog</a></li>
-                        <li><a href="timeline">Timeline</a></li>
-                        <li><a href="profile">Profile</a></li>
+                        <li><a href="timeline/?date=recent&profile=https:%2F%2Fsatra.databox.me%2Fprofile%2Fcard%23me">Timeline</a></li>
+                        <li><a href="profile/#/profile/view?webid=https:%2F%2Fsatra.databox.me%2Fprofile%2Fcard%23me">Profile</a></li>
                     </ul>
                 </nav>
             </header>
