fix: remove background image from timeline main panel

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
                     </footer>
                     -->
                     <section>
-                        <a href="https://twitter.com/satra_" class="twitter-follow-button twitter-follow-button-sidebar" data-show-count="false" data-lang="en" data-size="large" data-dnt="true">Twitter</a> |
-                        <a href="https://github.com/satra" rel="me">GitHub</a> | <a href="https://plus.google.com/105261369456480898587" rel="me">Google+</a>
+                        <p><a href="https://twitter.com/satra_" class="twitter-follow-button twitter-follow-button-sidebar" data-show-count="false" data-lang="en" data-size="large" data-dnt="true">Twitter</a> |
+                        <a href="https://github.com/satra" rel="me">GitHub</a> | <a href="https://plus.google.com/105261369456480898587" rel="me">Google+</a></p>
+
                         <p>I am a principal research scientist at the <a href="http://mcgovern.mit.edu">McGovern Institute for Brain Research</a>
                             at MIT, an assistant professor in the Department of Otology and Laryngology at
                             <a href="http://www.hms.harvard.edu">Harvard Medical School</a>, and a faculty member in the
