--- a/timeline/index.html
+++ b/timeline/index.html
@@ -204,7 +204,7 @@
 				<div class="col-sm-7">
 
 					<div class="panel panel-default">
-						<div class="panel-thumbnail"><img ng-src="{{backgroundImage}}" class="img-responsive"></div>
+						<!--<div class="panel-thumbnail"><img ng-src="{{backgroundImage}}" class="img-responsive"></div>-->
 						<div class="panel-body">
 							<span ng-if="profile">
 								<p>
