--- a/index.html
+++ b/index.html
@@ -158,6 +158,11 @@ span.Heading3Char
 	margin:1.0in .75in .75in .75in;}
 div.WordSection1
 	{page:WordSection1;}
+@page WordSection2
+	{size:8.5in 11.0in;
+	margin:1.0in .75in .75in .75in;}
+div.WordSection2
+	{page:WordSection2;}
  /* List Definitions */
 ol
 	{margin-bottom:0in;}
@@ -175,23 +180,29 @@ ul
 <table class=MsoTable15Plain4 border=0 cellspacing=0 cellpadding=0 align=left
  style='border-collapse:collapse;margin-left:6.0pt;margin-right:6.0pt'>
  <tr>
-  <td width=239 valign=top style='width:239.05pt;border:none;border-right:solid #D9D9D9 3.0pt;
+  <td width=86 valign=top style='width:86.05pt;border:none;border-right:solid #D9D9D9 3.0pt;
+  padding:0in 5.4pt 0in 5.4pt'>
+  <p style='margin:0in;margin-bottom:.0001pt'><b><i><span style='font-family:
+  "Gill Sans"'><img width=78 height=78 id="Picture 1"
+  src="index.fld/image001.gif"></span></i></b></p>
+  </td>
+  <td width=189 valign=top style='width:189.0pt;border:none;border-right:solid #D9D9D9 3.0pt;
   padding:0in 5.4pt 0in 5.4pt'>
   <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>SATRAJIT
   SUJIT GHOSH</span><span style='font-family:"Gill Sans"'>, PhD</span></p>
   <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>satra@mit.edu</span></p>
-  <p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'><a
-  href="http://satra.cogitatum.org"><span style='font-weight:normal'>http://satra.cogitatum.org</span></a></span></b><span
+  <p style='margin:0in;margin-bottom:.0001pt'><b><a
+  href="http://satra.cogitatum.org/"><span style='font-family:"Gill Sans";
+  font-weight:normal'>http://satra.cogitatum.org</span></a></b><span
   style='font-family:"Gill Sans"'> </span></p>
-  <p class=MsoNormal><b><span style='font-family:"Gill Sans"'><a
+  <p class=MsoNormal><b><a
   href="http://satra.cogitatum.org/assets/CV_Latest.pdf"><span
-  style='color:purple;font-weight:normal'>Download CV</span></a></span></b><span
-  style='font-family:"Gill Sans";color:black'>&nbsp;|&nbsp;</span><b><span
-  style='font-family:"Gill Sans"'><a href="https://github.com/satra"><span
-  style='color:purple;font-weight:normal'>Github Repos</span></a></span></b></p>
-  <p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
+  style='font-family:"Gill Sans";color:purple;font-weight:normal'>Download CV</span></a></b><span
+  style='font-family:"Gill Sans";color:black'>&nbsp;|&nbsp;</span><b><a
+  href="https://github.com/satra"><span style='font-family:"Gill Sans";
+  color:purple;font-weight:normal'>Github Repos</span></a></b></p>
   </td>
-  <td width=203 valign=top style='width:202.5pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
+  <td width=240 valign=top style='width:239.75pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
   <p style='margin:0in;margin-bottom:.0001pt'><span style='font-family:"Gill Sans"'>McGovern
   Institute for Brain Research</span></p>
   <p style='margin-top:0in;margin-right:-5.75pt;margin-bottom:0in;margin-left:
@@ -205,10 +216,17 @@ ul
  </tr>
 </table>
 
-<p style='margin:0in;margin-bottom:.0001pt'><i><span style='font-family:"Gill Sans"'><img
-border=0 width=54 height=54 id="Picture 1" src="index.fld/image001.gif"></span></i></p>
+<p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
 
 <p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
+
+</div>
+
+<b><span style='font-size:12.0pt;font-family:"Gill Sans"'><br clear=all
+style='page-break-before:auto'>
+</span></b>
+
+<div class=WordSection2>
 
 <p style='margin:0in;margin-bottom:.0001pt'><b><span style='font-family:"Gill Sans"'>&nbsp;</span></b></p>
 
@@ -287,10 +305,10 @@ University of Singapore, 1997, Prof. Lonce L. Wyse</span></p>
 <p class=MsoListParagraph style='margin-top:.1pt;margin-right:0in;margin-bottom:
 .1pt;margin-left:.25in;text-align:justify;text-indent:-.25in'><span
 style='font-family:"Gill Sans"'>1.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
-</span></span><span style='font-family:"Gill Sans"'>Gorgolewski, K., Burns, C.D.,
-Madison, C., Clark, D., Halchenko, Y.O., Waskom, M.L., Ghosh, S.S. (2011).
-Nipype: a flexible, lightweight and extensible neuroimaging data processing
-framework in Python.&nbsp;<i>Front. Neuroinform.</i>&nbsp;5:13.</span></p>
+</span></span><span style='font-family:"Gill Sans"'>Gorgolewski, K., Burns,
+C.D., Madison, C., Clark, D., Halchenko, Y.O., Waskom, M.L., Ghosh, S.S.
+(2011). Nipype: a flexible, lightweight and extensible neuroimaging data
+processing framework in Python.&nbsp;<i>Front. Neuroinform.</i>&nbsp;5:13.</span></p>
 
 <p class=MsoListParagraph style='margin-left:.25in;text-indent:-.25in'><span
 style='font-family:"Gill Sans"'>2.<span style='font:7.0pt "Times New Roman"'>&nbsp;&nbsp;&nbsp;&nbsp;
@@ -337,8 +355,8 @@ margin-left:.25in'><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
   Innovations</span></b></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:Symbol'>á<span style='font:7.0pt "Times New Roman"'>&nbsp;
-  </span></span><span style='font-family:"Gill Sans"'>Nipype: Dataflows for reproducible
-  biomedical research</span></p>
+  </span></span><span style='font-family:"Gill Sans"'>Nipype: Dataflows for
+  reproducible biomedical research</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:Symbol'>á<span style='font:7.0pt "Times New Roman"'>&nbsp;
   </span></span><span style='font-family:"Gill Sans"'>VoiceUp: Mobile health
@@ -357,8 +375,8 @@ margin-left:.25in'><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
   communication noise suppression </span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:Symbol'>á<span style='font:7.0pt "Times New Roman"'>&nbsp;
-  </span></span><span style='font-family:"Gill Sans"'>Carotid artery diameter
-  estimates from ultrasound</span></p>
+  </span></span><span style='font-family:"Gill Sans"'>Carotid artery diameter estimates
+  from ultrasound</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
   style='font-family:Symbol'>á<span style='font:7.0pt "Times New Roman"'>&nbsp;
   </span></span><span style='font-family:"Gill Sans"'>FlexEffex: Interactive
@@ -379,9 +397,8 @@ margin-left:.25in'><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:Symbol;
   color:black'>á<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
-  style='font-family:"Gill Sans";color:black'>U01 - Connectomes related to
-  anxiety and depression in adolescents. (Project coordinator and informatics
-  lead)</span></p>
+  style='font-family:"Gill Sans";color:black'>U01 - Connectomes related to anxiety
+  and depression in adolescents. (Project coordinator and informatics lead)</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
   margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:Symbol;
   color:black'>á<span style='font:7.0pt "Times New Roman"'>&nbsp; </span></span><span
