--- a/index.html
+++ b/index.html
@@ -354,52 +354,54 @@ margin-left:.25in'><span style='font-family:"Gill Sans"'>&nbsp;</span></p>
   <p class=MsoNormal><b><span style='font-family:"Gill Sans"'>Technological
   Innovations</span></b></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>Nipype: Dataflows for reproducible biomedical
-  research</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>Nipype: Dataflows for
+  reproducible biomedical research</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>VoiceUp: Mobile health voice and data
-  collection</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>VoiceUp: Mobile health
+  voice and data collection</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>MURFI: A realtime software for fMRI-based
-  biofeedback</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>MURFI: A realtime
+  software for fMRI-based biofeedback</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>Audapter: Realtime vocal modification</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>Audapter: Realtime vocal
+  modification</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>MRCancel: MRI communication noise suppression
-  </span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>MRCancel: MRI
+  communication noise suppression </span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>Carotid artery diameter estimates from
-  ultrasound</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>Carotid artery diameter estimates
+  from ultrasound</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>FlexEffex: Interactive sound effects and
-  music</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>FlexEffex: Interactive
+  sound effects and music</span></p>
   <p class=MsoListParagraph style='margin-left:9.0pt;text-indent:-9.0pt'><span
-  style='font-family:Wingdings'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
-  style='font-family:"Gill Sans"'>Contributions to opensource projects</span></p>
+  style='font-family:"Gill Sans"'>&gt;<span style='font:7.0pt "Times New Roman"'>
+  </span></span><span style='font-family:"Gill Sans"'>Contributions to
+  opensource projects</span></p>
   </td>
   <td width=225 valign=top style='width:225.0pt;border:none;padding:0in 5.4pt 0in 5.4pt'>
   <p class=MsoNormal><b><span style='font-family:"Gill Sans"'>Selected NIH Research
   Grants</span></b></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
-  margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:Wingdings;
-  color:black'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
+  margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
+  color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
   style='font-family:"Gill Sans";color:black'>R01 - Nipype: Dataflows for
   Reproducible Biomedical Research (Principal Investigator)</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
-  margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:Wingdings;
-  color:black'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
+  margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
+  color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
   style='font-family:"Gill Sans";color:black'>U01 - Connectomes related to anxiety
   and depression in adolescents. (Project coordinator and informatics lead)</span></p>
   <p style='margin-top:0in;margin-right:0in;margin-bottom:0in;margin-left:8.3pt;
-  margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:Wingdings;
-  color:black'>¤<span style='font:7.0pt "Times New Roman"'> </span></span><span
+  margin-bottom:.0001pt;text-indent:-9.0pt'><span style='font-family:"Gill Sans";
+  color:black'>&gt;<span style='font:7.0pt "Times New Roman"'> </span></span><span
   style='font-family:"Gill Sans";color:black'>R01 supplement - Genetic
   Determinants of Schizophrenia Intermediate Phenotypes (Subaward principal
   investigator)</span></p>
